# clean-arch-python

./: .gitignore  main.py  pyproject.toml
src/data/interfaces/: user_repository.py
src/data/use_cases/: test_user_finder.py  user_finder.py
src/domain/model/: users.py
src/domain/use_cases/: user_finder.py
src/infra/db/entities/: users.py
src/infra/db/repositories/: test_users_repository.py  users_repository.py
src/infra/db/settings/: base.py  connection.py  test_connection.py
src/infra/db/tests/: users_repository.py
src/init/: schemas.sql
