[tool.poetry]
name = "clean-arch-python"
version = "0.1.0"
description = "Add your description here"
authors = ["Seu Nome <seu_email@example.com>"] 
readme = "README.md"
packages = [{include = "clean_arch_python"}]

[tool.poetry.dependencies]
python = ">=3.13"
pytest = ">=8.4.1"
sqlalchemy = ">=2.0.41"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = ["ALL"]
fixable = ["ALL"]
ignore = ["W191", "S101", "Q000", "D100", "D104", "INP001", "PIE790"] 

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"
indent-style = "tab"
docstring-code-format = true

[tool.pytest.ini_options]
pythonpath = ["."]